k8s/auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quirehut-sts
  labels:
    app: quirehut-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quirehut-sts
  template:
    metadata:
      name: quirehut-sts
      labels:
        app: quirehut-sts
    spec:
      volumes:
        - name: data-volume
          emptyDir: {}
      containers:
        - name: quirehut-sts
          image: ghcr.io/paul-mugeere/quirehut.keycloak:24.0.3
          imagePullPolicy: IfNotPresent
          args: [ "start-dev" ]
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: data-volume
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: 9000
      restartPolicy: Always
