k8s/auth.postgrsdb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quirehut-db-svc
spec:
  selector:
    app: quirehut-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
