k8s/auth.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quirehut-sts-svc
spec:
  selector:
    app: quirehut-sts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
