k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quirehut-sts-svc
  labels:    
    job: quirehut-sts-svc
    app: quirehut-sts
spec:
  selector:
    app: quirehut-sts
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
