k8s/auth.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quirehut-sts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: quirehut-sts.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quirehut-sts-svc
                port:
                  number: 80
